<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_id">52b79993</string>
    <string name="app_name">星宝宝童书</string>
    <string name="pull_to_refresh_tap_label">触摸下拉刷新...</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_name">closebook</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">朋友圈</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">Linked In</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>

    <style name="AnimHead" parent="@android:style/Animation">
        <item name="android:windowEnterAnimation">@anim/head_in</item>
        <item name="android:windowExitAnimation">@anim/head_out</item>
    </style>
    <!-- 显示大图片 -->
    <style name="ImageScale" parent="android:Theme.Black.NoTitleBar">
        <item name="android:windowAnimationStyle">@style/AnimHead</item>
        <item name="android:windowNoTitle">true</item>
        <!-- 无标题 -->
        <item name="android:windowFullscreen">true</item>
        <!-- 设置全屏显示 -->
        <item name="android:windowFrame">@null</item>
        <!-- 边框 -->
        <item name="android:windowIsFloating">false</item>
        <!-- 是否浮现在activity之上 -->
        <item name="android:windowIsTranslucent">true</item>
        <!-- 半透明 -->
        <item name="android:windowBackground">@android:color/black</item>
        <item name="android:backgroundDimEnabled">false</item>
        <!-- 模糊 -->
    </style>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据，请确认网络状况</string>
    <string name="load_error">暂无数据，请确认网络状况</string>
    <string name="load_location_error">无法获取输入地址信息</string>
    <string name="load_gps_error">无法获取位置，请重新点击该菜单或手动输入地址查询</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="sns_friends_title">朋友圈</string>
    <string name="sns_friends_item_del">删除</string>
    <string name="app_delete">删除</string>
    <string name="sns_post_error_touch_again">发送失败,轻触以再次发送</string>
    <string name="sns_comment">评论</string>
    <string name="sns_like">喜欢</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>
    <string name="descr_image">image</string>
    <string name="login_head_title">登陆家长助手</string>
    <string name="login_form_account">账号:</string>
    <string name="login_form_nick">昵称:</string>
    <string name="login_form_pwd">密码:</string>
    <string name="login_lgn_btn">登陆</string>
    <string name="login_reg_btn">注册</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">呢称/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    <string name="message_put_msg">说出你的想法</string>
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="choose_image">请选择图片文件！</string>
    <string name="delete_image">确定删除该图片吗？</string>
    <string name="post_type_martket">广场</string>
    <string name="post_type_chat">闲聊</string>
    <string name="post_type_diary">宝宝日志</string>
    <string name="post_type_moment">精彩瞬间</string>
    <string name="user_title_topic">话题</string>
    <string name="new_data_toast_message">有 %d 条更新</string>
    <string name="new_data_toast_none">没有新更新</string>
    <string name="reply_load_empty">暂时还没有人评论，赶快来抢沙发吧！</string>
    <string name="comment_pub_content_hint">输入评论</string>
    <string name="reply">回 复</string>

</resources>