<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_form_linear"
    android:layout_width="250.0dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="10dip"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip" >

        <TextView
            android:id="@+id/login_form_account_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="3dip"
            android:text="@string/login_form_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/login_form_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/login_form_account_txt"
            android:background="@color/white"
            android:hint="@string/login_dialog_account_hint"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="@color/login_hit"
            android:textSize="@dimen/text_size_15" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip" >

        <TextView
            android:id="@+id/login_form_pwd_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="3dip"
            android:text="@string/login_form_pwd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_form_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/login_form_pwd_txt"
            android:background="@color/white"
            android:hint="@string/login_dialog_password_hint"
            android:maxLines="1"
            android:password="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColorHint="@color/login_hit"
            android:textSize="@dimen/text_size_15" />
    </RelativeLayout>

</LinearLayout>